# MeusProjetos_Python

./: README.md
Api_Projeto.Integrador/: README.md
Avaliação 1/: carrinho.py  livro.py  produto.py
Avaliação_1/: eletronico.py  main.py
Avaliação_2/Mysqlconnector/: control.py  db_pedidos.sql  main.py  models.py
Avaliação_2/SqlAlchemy/: control.py  main.py  models.py
Avaliação_3/: README.md
Avaliação_4/Django/: db.sqlite3  pyproject.toml
Avaliação_4/Django/exemplo_django/: asgi.py  settings.py  urls.py  wsgi.py
Avaliação_4/Django/saudacao/: forms.py  urls.py  views.py
Avaliação_4/Django/saudacao/templates/saudacao/: base.html  inicial.html  saudacao.html
Avaliação_4/tarefas/: pyproject.toml
Avaliação_4/tarefas/config/: settings.py  urls.py
Avaliação_4/tarefas/tarefas_app/: admin.py  views.py
Avaliação_4/tarefas/tarefas_app/migrations/: 0001_initial.py
Avaliação_4/tarefas2/tarefas_app/migrations/: 0001_initial.py
Projeto_Integrador.API/: README.md  pyproject.toml
Projeto_Integrador.API/api_projetos/: README.md  settings.py  urls.py
Rest_willy.pedidos/: README.md
Rest_willy.pedidos/IWS/rest/: README.md
Rest_willy.pedidos/rest/: README.md
Tarefas/tarefas1/tarefas_app/: models.py  urls.py
Tarefas/tarefas1/tarefas_app/migrations/: 0001_initial.py
Tarefas/tarefas2/: pyproject.toml
tarefas/: .env  pyproject.toml
tarefas/config/: urls.py
tarefas/tarefas_app/: admin.py  views.py
tarefas/templates/: base.html
tarefas/templates/tarefas_app/: lista_tarefas.html
tarefas2/: .env
tarefas2/tarefas_app/: admin.py
