[project]
name = "exemplo1-mdjango"
version = "0.1.0"
description = "Meu primeiro projeto django"
authors = [
    {name = "willy fortuna",email = "willyfortunasc.unb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=4.1.0,<4.2.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "exemplo1"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
