[project]
name = "exemplo-django"
version = "0.1.0"
description = "Website Django de exemplo"
authors = [
    {name = "Willy Fortuna",email = "willyfortunasc.unb@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.8,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
